--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>apple</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body><p>Roze</p>
     <script src="index.js"></script>
   </body>
 </html>
