--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>apple</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body><p>Roze</p>
+  <body>
+ <STYLE TYPE="text/css">
+<!--
+BODY { color: #000000; 
+     background-color: #FFF5EE; 
+     font-size: 20px ;
+     font-family: 'Sora' , sans-sherif;}
+H1   { color: #FF69B4; 
+	 background-color: transparent;
+     font-size: 70px ; 
+     font-family: 'Sora', sans-sherif;
+     text-align: center;}
+H2   { color : #F08080;
+     font-size: 40px;
+     font-family: 'Sora' , sans-sherif;}
+-->
+</STYLE>
+  <h1> <P STYLE="background-color: transparent; padding: 10px; border: double 20px;"> Apple </P> </h1>
+  <IMG SRC="https://i.imgur.com/fALSzBE.png" WIDTH="400" HEIGHT="auto" ALT="Monument Valley">
+  <h2> dit is de tussentitel </h2>
+  <p>Roze</p>
     <script src="index.js"></script>
   </body>
 </html>
