--- a/index.html
+++ b/index.html
@@ -6,28 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>apple</title>
     <link rel="stylesheet" href="style.css">
+    <style type="text/css">
+      body {
+        color: #000000; 
+        background-color: #FFF5EE; 
+        font-size: 20px;
+        font-family: 'Sora', sans-serif;
+      }
+      h1 {
+        color: #FF69B4; 
+        background-color: transparent;
+        font-size: 70px; 
+        font-family: 'Sora', sans-serif;
+        text-align: center;
+      }
+      h2 {
+        color: #F08080;
+        font-size: 40px;
+        font-family: 'Sora', sans-serif;
+      }
+      img {
+        width: 400px;
+        height: auto;
+        display: block;
+        margin: 0 auto; 
+      }
+      e {
+        background-color: transparent; 
+        padding: 5px; 
+        border: double 10px;
+        color: #FF69B4	
+      }
+      p {
+        font-family: 'Calibri', sans-serif;
+        color: #FF69B4
+    </style>
   </head>
   <body>
- <STYLE TYPE="text/css">
-<!--
-BODY { color: #000000; 
-     background-color: #FFF5EE; 
-     font-size: 20px ;
-     font-family: 'Sora' , sans-sherif;}
-H1   { color: #FF69B4; 
-	 background-color: transparent;
-     font-size: 70px ; 
-     font-family: 'Sora', sans-sherif;
-     text-align: center;}
-H2   { color : #F08080;
-     font-size: 40px;
-     font-family: 'Sora' , sans-sherif;}
--->
-</STYLE>
-  <h1> <P STYLE="background-color: transparent; padding: 10px; border: double 20px;"> Apple </P> </h1>
-  <IMG SRC="https://i.imgur.com/fALSzBE.png" WIDTH="400" HEIGHT="auto" ALT="Monument Valley">
-  <h2> dit is de tussentitel </h2>
-  <p>Roze</p>
-    <script src="index.js"></script>
+    <h1> <P STYLE="background-color: transparent; padding: 10px; border: double 20px;">
+    Apple</h1> </P>
+    <img src="https://i.imgur.com/fALSzBE.png" alt="Monument Valley">
+    <h2>Is apple te duur voor wat het is?</h2>
+    <p>Of Apple te duur is, hangt af van je perspectief. 
+    <br> Apple-producten zijn premium geprijsd vanwege hun design, ecosysteem en merkwaarde, maar technisch gezien zijn er vaak goedkopere alternatieven met vergelijkbare specificaties. Voor sommigen is het de investering waard, voor anderen niet.</p>
+    <h2>Waarom is Apple zo populair?</h2>
+    <p> <a href="https://www.rtv.be/waarom-apple-zo-populair#:~:text=Apple%20positioneert%20zichzelf%20als%20een,de%20beste%20in%20de%20branche." target="_blank">Hier vind je een artikel</a>. Apple is populair door de functies en marketing maar ook deels de reputatie en het feit dat iedereen het heeft, maakt jou er ook iets van kopen.</p>
+  
+   <h2>Hoe behoudt Apple zijn succes? </h2> 
+   
+   <iframe 
+   width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/9f9eW739yCg?si=oKjVOYi2tPz_m8c8" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen>
+    </iframe>
+  <script src="index.js"></script>
   </body>
 </html>
